      more like standard function calls and makes method code easier to
      analyze correctly.

      \item The twelve \code{as.data.frame.<class>()} methods which were
      deprecated only via \env{_R_CHECK_AS_DATA_FRAME_EXPLICIT_METHOD_} and
      in \command{R CMD check --as-cran} are formally deprecated now in
      favour of calling \code{as.data.frame()} or \code{as.data.frame.vector()}.

      \item The default method for the directional comparison operators
      \code{<}, \code{>}, \code{<=}, and \code{>=} now signals an error
      when one of the operands is a language objects, i.e. a symbol or a
      call.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item The \pkg{methods} package is more robust to not being attached to
      the search path.  More work needs to be done.

      \item \code{pairwise.t.test()} misbehaved when subgroups had 0 \abbr{DF}
      for variance, even with \code{pool.sd = TRUE}.  (\PR{18594} by
      Jack Berry).

      \item Probability distribution functions \code{[dpq]<distrib>(x, *)},
      but also \code{bessel[IKJY](x, .)} now consistently preserve
      \code{attributes(x)} when \code{length(x) == 0}, e.g., for a
      \eqn{2 \times 0}{2 x 0} matrix, thanks to \I{Karolis Koncevičius}'
      report \PR{18509}.

      \item Group \dQuote{Summary} computations such as
      \code{sum(1:3, 4, na.rm = 5, NA, 7, na.rm = LL)} now give an error
      instead of either \code{17} or \code{NN} for \code{LL} true or false,
      as proposed by \I{Ivan Krylov} on the R-devel mailing list.  (This
      also means it is now an error to specify \code{na.rm} more than once.)

      \item \code{as.complex(x)} now returns \code{complex(real = x,
      imaginary = 0)} for \emph{all} numerical and logical \code{x},
      notably also for \code{NA} or \code{NA_integer_}.

      \item Directories are now omitted by
      \code{file.copy(, recursive = FALSE)} and in \code{file.append()}
      (\PR{17337}).
